--- a/chaeschtlizettel/css/chaeschtlizettel.css
+++ b/chaeschtlizettel/css/chaeschtlizettel.css
@@ -24,15 +24,18 @@
 .chae-wrapper{
   /*background-color: #EAE9E9;*/
   /*border-color: #838282;*/
-  background: url("../images/note.png");
+  background: url("../images/webseite_postit.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   /*width:400px;*/
   min-height:800px;
   padding-top: 160px;
-  padding-left: 80px;
+  padding-left: 60px;
   padding-bottom: 80px;
-  padding-right: 40px;
+  padding-right: 60px;
+  width:75%;
+  margin-left: auto;
+  margin-right: auto;
   /*margin: 10px;*/
 }
 .chae-public-content{
