--- a/chaeschtlizettel/css/chaeschtlizettel.css
+++ b/chaeschtlizettel/css/chaeschtlizettel.css
@@ -29,14 +29,27 @@
   background-size: cover;
   /*width:400px;*/
   min-height:800px;
-  padding-top: 160px;
-  padding-left: 60px;
+  padding-top: 120px;
+  //padding-left: 60px;
   padding-bottom: 80px;
-  padding-right: 60px;
-  width:75%;
+  //padding-right: 60px;
   margin-left: auto;
   margin-right: auto;
   /*margin: 10px;*/
+}
+@media screen and (max-width: 40em) {
+  .chae-wrapper{
+    width:100%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+@media screen and (min-width: 40em) {
+  .chae-wrapper{
+    width:75%;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
 }
 .chae-public-content{
   padding: 5px;
